--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <h2>Stay in Touch</h2>
         <p>For more skills, personal projects and more, don't hesitate to contact me.</p>
-        <a id="btn" href="mailto:daniela.nazare@softelligence.net">Contact Me</a>
+        <a id="btn" href="mailto:nazaredaniela99@gmail.com">Contact Me</a>
 
     </div>
 
